# HomeAutomation

./: CMakeLists.txt  README.md  UtilityServer.cc  UtilityServer.h  main.cc
include/: ConnectionHandler.h  ConnectionHandlerIF.h  MessageHandler.h  MessageHandlerIF.h  WsServer.h
src/: ConnectionHandler.cc  MessageHandler.cc  WsServer.cc  main.cc
